--- a/SimpleEvents/SimpleEvents.csproj
+++ b/SimpleEvents/SimpleEvents.csproj
@@ -8,6 +8,9 @@
     <PackageReference Include="Belgrade.Sql.Client" Version="1.1.4" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
